--- a/views/login.html
+++ b/views/login.html
@@ -7,14 +7,40 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <h2>Inicio de Sesión</h2>
-    <form id="loginForm">
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
-        <button type="submit">Iniciar Sesión</button>
-    </form>
+    <header>
+        <nav>
+            <div class="container">
+                <h1 class="logo">Gestión de Tareas</h1>
+                <ul class="nav-links">
+                    <li><a href="register.html">Registrarse</a></li>
+                    <li><a href="login.html">Iniciar Sesión</a></li>
+                    <li><a href="dashboard.html">Ir al Panel de Control</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <main class="login-container">
+        <div class="form-container">
+            <h2>Inicio de Sesión</h2>
+            <form id="loginForm">
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" required>
+                
+                <label for="password">Contraseña:</label>
+                <input type="password" id="password" name="password" required>
+                
+                <button type="submit">Iniciar Sesión</button>
+            </form>
+        </div>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>Desarrollado por Melissa Beltran para CESDE 2024</p>
+        </div>
+    </footer>
+
     <script src="../js/app.js"></script>
 </body>
 </html>
